--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
 <body>
 
     <header>
-        Waterplant
+        <h1>Waterplant</h1>
     </header>
 
-    <nav>
+    <!-- <nav>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Products</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">About Us</a></li>¬ø
         </ul>
-    </nav>
+    </nav> -->
 
     <section class="hero">
         Fresh & Quality Meats, Locally Sourced!
@@ -29,6 +28,23 @@
         <h2>About Us</h2>
         <p>We take pride in offering the freshest meats and groceries, sourced from local farms.</p>
     </div>
+
+    <div class="container">
+      <h2>Locations</h2>
+      <div class="locations">
+        <div class="one">
+          <p>Waterplant Won</p>
+          <p>305 McPhillips St, Winnipeg, MB R3E 3H9</p>
+          <p>1(204)-775-6328 (MEAT)</p>
+  
+        </div>
+        <div class="two">
+          <p>Waterplant Too</p>
+          <p>998 Keewatin St, Winnipeg, MB R2R 2V1</p>
+          <p><em>Temporarily Closed</em></p>
+        </div>
+      </div>
+  </div>
 
     <footer>
         &copy; 2025 Waterplant | All Rights Reserved
