--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Local Butcher & Grocery</title>
+    <title>Waterplant</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -26,25 +26,38 @@
 
     <div class="container">
         <h2>About Us</h2>
-        <p>We take pride in offering the freshest meats and groceries, sourced from local farms.</p>
+        <p>Your local Winnipeg butcher offering fresh pork, quality meats, Filpino groceries, Asian groceries, and water refilling services.</p>
+        <p>We ony use local Manitoba pork!</p>
     </div>
+
+
+    <h2>FAMILY OWNED AND OPERATED</h2>
+    <p>Since 2010</p>
 
     <div class="container">
       <h2>Locations</h2>
       <div class="locations">
         <div class="one">
-          <p>Waterplant Won</p>
-          <p>305 McPhillips St, Winnipeg, MB R3E 3H9</p>
-          <p>1(204)-775-6328 (MEAT)</p>
+          <a href="https://maps.app.goo.gl/drsAjf7nEdhNJucr5" target="_blank" ><h2>Waterplant Won</h2></a>
+          <a href="https://maps.app.goo.gl/drsAjf7nEdhNJucr5" target="_blank"><p>305 McPhillips St, Winnipeg, MB R3E 3H9</p></a>
+          <p><a href="(204)-775-6328">1(204)-775-6328 (MEAT)</a></p>
+          <p>Monday - Friday 9AM - 7:30PM</p>
   
         </div>
         <div class="two">
-          <p>Waterplant Too</p>
-          <p>998 Keewatin St, Winnipeg, MB R2R 2V1</p>
+          <a href="https://maps.app.goo.gl/f3FjQRmiUxmFPunZ9" target="_blank"><h2>Waterplant Too</h2></a>
+          <a href="https://maps.app.goo.gl/f3FjQRmiUxmFPunZ9" target="_blank"><p>998 Keewatin St, Winnipeg, MB R2R 2V1</p></a>
           <p><em>Temporarily Closed</em></p>
+          <p><em>Please visit Waterplant Won</em></p>
         </div>
       </div>
-  </div>
+    </div>
+
+    <br>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2569.2066306978104!2d-97.1718944238184!3d49.913696525866335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52ea73ceec3628ed%3A0x9898ab44c5162e6c!2sWater%20Plant%20Won!5e0!3m2!1sen!2sca!4v1742333874984!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2567.649486352632!2d-97.19925292381667!3d49.942917923777784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52ea726ec74d179f%3A0x391859f43cf24dc!2sWater%20Plant%20Too!5e0!3m2!1sen!2sca!4v1742333895561!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     <footer>
         &copy; 2025 Waterplant | All Rights Reserved
